# wasmcloud-pattern-monitor

./: .gitignore  README.md  wadm.yaml
.github/workflows/: ci.yml  release.yml
component/: Cargo.toml  wasmcloud.toml
component/src/: lib.rs
component/wit/: deps.toml  world.wit
tests/: README.md  run_integration_test.sh
